--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongodb": "4.1",
+    "mongoose": "^7.4.5"
   }
 }
